Sun May  4 22:18:46 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (CommandRollout): fMove must be inverted to calculate rScore.
	(bug reported by Ian Shaw)

Sat May  3 10:36:10 2003  Joern Thyssen  <jth@gnubg.org>

	* drawboard.c (ParseMove, CanonicalMoveOrder): fix bug: -1 is used as 
	terminator, not 0.
	(reported by Ron Barry)

Sat May  3 10:07:05 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkcube.c (CubeAnalysis, TakeAnalysis), 
	html.c (HTMLPrintCubeAnalysisTake), text.c (OutputCubeAnalysis): 
	fix problem with MWC being shown in money game.
	(reported by Ian Shaw)

Fri May  2 19:25:12 2003  Oystein Johansen  <oystein@gnubg.org>

        * import.c (ParseJF): fix bugs!

Thu May  1 16:15:12 2003  Oystein Johansen  <oystein@gnubg.org>
        
	* export.c (CommandExportPositionJF): More corrections to export of
	JellyFish positions. Reported by Michael.
	
Fri Apr 25 20:26:27 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c: new command "load position ..."
	* sgf.c (CommandLoadPosition): new function
	* gtkgame.c: new menu entry for loading position.

Mon Apr 14 16:31:12 2003  Oystein Johansen  <oystein@gnubg.org>

        * export.c (CommandExportPositionJF): Based on tests by Michael
	Depreli, I now think I have done the last change to the JellyFish
	position export code. Thanks for the testing, Michael.
	
Sun Apr 13 09:51:12 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c: add and rephrase some menu entries in order to
	avoid confusion between snowie .txt and snowie standard text.

Sun Apr 13 12:41:40 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* eval.c (ScoreMoves): Restore incremental eval of NN by keeping a
	separate state for each net.

Sat Apr 12 19:17:23 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (FindnSaveBestMoves): keep track of the max ply used.
	(reported by Michael Depreli)

Sat Apr 12 14:58:54 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (SetMatchID): hprmf! CommandSetBoard resets ms.fResigned.
	(reported by Martin Janke)
